--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -5,7 +5,7 @@
 <div class="container-max mkt-homepage" style="background-color:white;padding-top:50px;padding-bottom:50px;">
 
 
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" style="padding-bottom:30px;">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="http://www.beatinternet.de/mueller/content/startpage/banner.jpg" alt="First slide">
@@ -20,21 +20,21 @@
 </div>
 
 
-      <div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;">
+      <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" >
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" >
 </div>
                     </div>
-             <div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;">
+             <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" >
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%">
 </div>
                     </div>
                     
                       
-<div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;">
+<div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" >
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" >
 </div>
                     </div>
 
