--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -22,19 +22,19 @@
 
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" >
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;" >
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%">
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:30px;">
 </div>
                     </div>
                     
                       
 <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" >
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:30px;">
 </div>
                     </div>
 
