--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -40,8 +40,30 @@
 
 
 
+<div style="text-align: center;">
 
+<h2>#TOP PRODUCTS</h2><br>
+Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
 
+      <div class="col-xs-12 col-sm-4 text-xs-center" style="">
+<div style="text-align: left;">
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/9073/middle/16284.jpg" width="100%" style="padding-top:30px;" >
+</div>
+                    </div>
+             <div class="col-xs-12 col-sm-4 text-xs-center" style="">
+<div style="text-align: left;">
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7811/middle/12904.jpg" width="100%" style="padding-top:30px;">
+</div>
+                    </div>
+                    
+                      
+<div class="col-xs-12 col-sm-4 text-xs-center" style="">
+<div style="text-align: left;">
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7813/middle/12534.jpg" width="100%" style="padding-top:30px;">
+</div>
+                    </div>
+
+  </div>
 
 
 
