--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -4,7 +4,7 @@
 
 <div class="container-max mkt-homepage" style="background-color:white;padding-top:50px;padding-bottom:50px;">
 
-
+<div style="margin-left:15px;margin-right:15px;">
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" style="padding-bottom:30px;">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -18,7 +18,7 @@
     </div>
   </div>
 </div>
-
+</div>
 
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
