--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -40,26 +40,28 @@
 
 
 
-<div style="text-align: center;">
+<div style="text-align: center;padding-top:30px;">
 
-<h2>#TOP PRODUCTS</h2><br>
+<h2><b>#TOP PRODUCTS</h2></b><br>
 Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
 
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
-<div style="text-align: center;">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/9073/middle/16284.jpg" width="100%" style="padding-top:30px;" >
+<div style="text-align: center;"> <a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/gestreifte-daybag_7813_10159">
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/9073/middle/16284.jpg" width="100%" style="padding-top:30px;" ></a>
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7811/middle/12904.jpg" width="100%" style="padding-top:30px;">
+<a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/steampunk-tasche-banned_9073_11419">
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7811/middle/12904.jpg" width="100%" style="padding-top:30px;"></a>
 </div>
                     </div>
                     
                       
 <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;">
-<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7813/middle/12534.jpg" width="100%" style="padding-top:30px;">
+<a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/gestreifte-daybag_7813_10159">
+<img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/item/images/7813/middle/12534.jpg" width="100%" style="padding-top:30px;"></a>
 </div>
                     </div>
 
