--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,7 +1,8 @@
-{{ component("Ceres::LiveShopping.Components.LiveShoppingItem") }}
 {{ component("Ceres::Basket.Components.BasketList") }}
+{{ component("Ceres::Checkout.Components.ContactWishInput") }}
 {{ component("Ceres::Checkout.Components.PaymentProviderSelect") }}
 {{ component("Ceres::Checkout.Components.PlaceOrder") }}
 {{ component("Ceres::Checkout.Components.ShippingProfileSelect") }}
 {{ component("Ceres::Containers.Components.LastSeenItemList") }}
+{{ component("Ceres::LiveShopping.Components.LiveShoppingItem") }}
 {{ component("Ceres::Newsletter.Components.NewsletterInput") }}
