--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -41,8 +41,8 @@
 
 
 <div style="text-align:center;padding-top:40px;">
-
-<h2><b>#TOP PRODUCTS</h2></b><br>
+<div style="color:black;">
+<h2><b>#TOP PRODUCTS</h2></b></div>
 Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
 
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
