--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -38,7 +38,7 @@
 </div>
                     </div>
 
-
+<hr class="my-2" style="padding:15px;">
 
 <div style="text-align:center;padding-top:40px;">
 <div style="color:black;">
