--- a/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
+++ b/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
@@ -1,9 +1,12 @@
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
+{{ Twig.import("LayoutContainer", "Ceres::PageDesign.Macros.LayoutContainer") }}
 {{ Twig.component("Ceres::Basket.Components.BasketTotals") }}
 
 <div>
     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.BeforeBasketTotals"])) }}
+
     <basket-totals template="#vue-basket-totals"></basket-totals>
+    
     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.AfterBasketTotals"])) }}
 </div>
