--- a/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
+++ b/resources/views/Widgets/Checkout/ShippingProfileWidget.twig
@@ -7,9 +7,7 @@
 {% set hinttext = widget.settings.hinttext.mobile %}
 
 <div class="widget widget-shipping-profile widget-{{ widget.settings.appearance.mobile | default("primary") }}">
-    <header class="mb-3">
-        <h3>{{ Twig.trans("Ceres::Template.checkoutShippingProfile") }}</h3>
-    </header>
+    <h3 class="mb-3">{{ Twig.trans("Ceres::Template.checkoutShippingProfile") }}</h3>
 
     {% if hinttext is not empty %}
         <p>{{ hinttext | raw }}</p>
