--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -19,10 +19,11 @@
   </div>
 </div>
 </div>
-
+<div style="padding-bottom:30px;">
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;" >
+<h2> #accerios</h2>
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="">
@@ -37,10 +38,11 @@
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:30px;">
 </div>
                     </div>
+                    
+                    </div>
 
-<hr class="my-2" style="padding:15px;">
 
-<div style="text-align:center;padding-top:40px;">
+<div style="text-align:center;">
 <div style="color:black;">
 <h2><b>#TOP PRODUCTS</h2></b></div>
 Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
