--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -19,16 +19,17 @@
   </div>
 </div>
 </div>
-<div style="padding-bottom:30px;">
+<div style="padding-bottom:50px;">
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;" >
-<h2> #accerios</h2>
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:30px;" >
+<div style="position:relative;"><h2> #forher</h2></div>
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:30px;">
+<img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;">
+<div><h2> #accessories</h2></div>
 </div>
                     </div>
                     
@@ -36,10 +37,11 @@
 <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:30px;">
+<div><h2> #realmen</h2></div>
 </div>
                     </div>
                     
-                    </div>
+                    </div></div><br>
 
 
 <div style="text-align:center;">
