<div style="position:relative;left:20px;top:20px;"><h2> #accessories</h2></div>

--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -22,22 +22,24 @@
 <div style="padding-bottom:50px;">
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
+<div style="position:relative;left:20px;top:20px;"><h2> #forher</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:30px;" >
-<div style="position:relative;"><h2> #forher</h2></div>
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
+<div style="position:relative;left:20px;top:20px;"><h2> #accessories</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;">
-<div><h2> #accessories</h2></div>
+
 </div>
                     </div>
                     
                       
 <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
+<div style="position:relative;left:20px;top:20px;"><h2> #realmen</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:30px;">
-<div><h2> #realmen</h2></div>
+
 </div>
                     </div>
                     
