changed line-height on btn-block icons

--- a/resources/css/ceres-legacy.scss
+++ b/resources/css/ceres-legacy.scss
@@ -11091,6 +11091,13 @@ button:focus {
 	&.btn-m-r {
 		margin-right: 10px;
 	}
+
+	&.btn-block {
+		> .fa {
+			line-height: inherit;
+		}
+	}
+
 }
 
 .btn-right {
