--- a/resources/scss/ceres/common/_buttons.scss
+++ b/resources/scss/ceres/common/_buttons.scss
@@ -137,6 +137,13 @@ button:focus {
 	&.btn-m-r {
 		margin-right: 10px;
 	}
+
+	&.btn-block {
+		> .fa {
+			line-height: inherit;
+		}
+	}
+
 }
 
 .btn-right {
