--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -22,13 +22,13 @@
 <div style="padding-bottom:50px;">
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:20px;"><h2> #forher</h2></div>
+<div style="position:relative;left:20px;top:-40px;"><h2> #forher</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:30px;" >
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:20px;"><h2> #accessories</h2></div>
+<div style="position:relative;left:20px;top:-40px;"><h2> #accessories</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;">
 
 </div>
@@ -37,7 +37,7 @@
                       
 <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:20px;"><h2> #realmen</h2></div>
+<div style="position:relative;left:20px;top:-40px;"><h2> #realmen</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:30px;">
 
 </div>
@@ -46,7 +46,7 @@
                     </div></div><br>
 
 
-<div style="text-align:center;">
+<div style="text-align:center;padding:50px;">
 <div style="color:black;">
 <h2><b>#TOP PRODUCTS</h2></b></div>
 Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
