--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -20,13 +20,13 @@
 </div>
 </div>
 <div style="padding-bottom:50px;">
-      <div class="col-xs-12 col-sm-4 text-xs-center" style="">
+      <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:-40px;"><h2> #forher</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:30px;" >
 </div>
                     </div>
-             <div class="col-xs-12 col-sm-4 text-xs-center" style="">
+             <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:-40px;"><h2> #accessories</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;">
@@ -35,7 +35,7 @@
                     </div>
                     
                       
-<div class="col-xs-12 col-sm-4 text-xs-center" style="">
+<div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:-40px;"><h2> #realmen</h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:30px;">
