--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -22,13 +22,13 @@
 <div style="padding-bottom:50px;">
       <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:70px;"><h2> #forher</h2></div>
+<div style="position:relative;left:20px;top:150px;"><h2><b>#forher</b></h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:30px;" >
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:70px;"><h2> #accessories</h2></div>
+<div style="position:relative;left:20px;top:150px;"><h2><b>#accessories</b></h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;">
 
 </div>
@@ -37,7 +37,7 @@
                       
 <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:70px;"><h2> #realmen</h2></div>
+<div style="position:relative;left:20px;top:150px;"><h2><b>#realmen</b></h2></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:30px;">
 
 </div>
