--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -46,8 +46,7 @@
                     </div></div><br>
 
 
-<div style="text-align:center;padding:50px;">
-<div style="color:black;">
+<div style="color:black;padding:50px;">
 <h2><b>#TOP PRODUCTS</h2></b></div>
 Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
 
