--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -22,16 +22,16 @@
 <div style="padding-bottom:50px;">
       <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:150px;"><h2><b>#forher</b></h2></div>
-<div style="position:relative;left:20px;top:200px;letter-spacing: 0.1em;"><h3><b>HOT TRENDS 2019</b></h3></div>
+<div style="position:relative;left:20px;top:120px;"><h2><b>#forher</b></h2></div>
+<div style="position:relative;left:20px;top:150px;letter-spacing: 0.1em;"><h4>HOT TRENDS 2019</h4></div>
 
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:30px;" >
 </div>
                     </div>
              <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:150px;"><h2><b>#accessories</b></h2></div>
-<div style="position:relative;left:20px;top:200px;letter-spacing: 0.1em;"><h3><b>BEST LOOK</b></h3></div>
+<div style="position:relative;left:20px;top:120px;"><h2><b>#accessories</b></h2></div>
+<div style="position:relative;left:20px;top:150px;letter-spacing: 0.1em;"><h4>BEST LOOK</h4></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;">
 
 </div>
@@ -40,8 +40,8 @@
                       
 <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
-<div style="position:relative;left:20px;top:150px;"><h2><b>#realmen</b></h2></div>
-<div style="position:relative;left:20px;top:200px;letter-spacing: 0.1em;"><h3><b>BEST STYLE 2019</b></h3></div>
+<div style="position:relative;left:20px;top:120px;"><h2><b>#realmen</b></h2></div>
+<div style="position:relative;left:20px;top:150px;letter-spacing: 0.1em;"><h4>BEST STYLE 2019</h4></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:30px;">
 
 </div>
