--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -49,8 +49,8 @@
                     
                     </div></div><br>
 
-
-<div style="color:black;padding:50px;text-align: center;">
+<div style="text-align: center;">
+<div style="color:black;padding:50px;">
 <h2><b>#TOP PRODUCTS</h2></b></div>
 Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
 
@@ -74,7 +74,7 @@ Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
 </div>
                     </div>
 
-  </div>
+  </div> </div>
 
 
 
