--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -31,7 +31,7 @@
              <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:120px;"><h2><b>#accessories</b></h2></div>
-<div style="position:relative;left:20px;top:150px;letter-spacing: 0.3em;"><h4>BEST LOOK</h4></div>
+<div style="position:relative;left:20px;top:150px;letter-spacing: 0.3em;"><h4>NEW LOOK</h4></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:30px;">
 
 </div>
