--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -50,7 +50,7 @@
                     </div></div><br>
 
 <div style="text-align: center;">
-<div style="color:black;padding:50px;">
+<div style="color:black;">
 <h2><b>#TOP PRODUCTS</h2></b></div>
 Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
 
