--- a/resources/views/Category/Item/Partials/CategoryListItem.twig
+++ b/resources/views/Category/Item/Partials/CategoryListItem.twig
@@ -12,12 +12,17 @@
 
 <article class="cmp cmp-product-thumb cmp-product-thumb--grid">
     <div class="thumb-inner">
+
+{% if frontend.Account.getIsAccountLoggedIn %}
+    
         <add-to-basket
             :item="{{ item.data | json_encode() }}"
             :use-large-scale="true"
             item-url="{{ itemUrl }}">
         </add-to-basket>
+{% else %}
 
+{% endif %}
         <div class="thumb-background"></div>
 
         <div class="thumb-image">
