--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -2,9 +2,9 @@
 {% set homepageJson = getExternalContent("https://cdn02.plentymarkets.com/pmsbpnokwu6a/plugin/production/marketingresource/js/HomepageContent.json") %}
 {% set homepageData = homepageJson[currentLang] %}
 
-<div class="container-max mkt-homepage" style="background-color:white;padding-top:50px;padding-bottom:50px;">
 
-<div style="margin-left:15px;margin-right:15px;">
+
+<div style="margin-left:15px;margin-right:15px;widht:100%">
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" style="padding-bottom:30px;">
   <div class="carousel-inner">
     <div class="carousel-item active">
@@ -19,6 +19,8 @@
   </div>
 </div>
 </div>
+<div class="container-max mkt-homepage" style="background-color:white;padding-top:50px;padding-bottom:50px;">
+
 <div style="padding-bottom:50px;">
       <div class="col-xs-12 col-sm-4 text-xs-center" style="color:black;">
 <div style="text-align: left;">
