--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -4,8 +4,8 @@
 
 
 
-<div style="margin-left:15px;margin-right:15px;widht:100%">
-<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel" style="padding-bottom:30px;">
+<div style="widht:100%">
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img class="d-block w-100" src="http://www.beatinternet.de/mueller/content/startpage/banner.jpg" alt="First slide">
