--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -57,7 +57,7 @@
 
 <div style="text-align: center;">
 <div style="color:black;">
-<h2><b>#TOPPRODUCTS</h2></b></div>
+<h2><b>#TOP</b>PRODUCTS</h2></div>
 Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
 
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
