--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -28,7 +28,8 @@
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#forher</b></h2></div>
 <div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h4>HOT TRENDS 2019</h4></div>
-<div style="position:relative;left:20px;top:148px;letter-spacing: 0.3em;border: 5px solid black;margin:5px;"><h5>SHOP NOW</h5></div>
+<div style="position:relative;left:20px;top:148px;letter-spacing: 0.3em;border: 1px solid black;margin:5px;
+width:150px;height;50px;vertical-align:middle;"><h5>SHOP NOW</h5></div>
 
 
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat2.jpg" width="100%" style="padding-top:20px;padding-bottom:60px;" >
@@ -38,7 +39,8 @@
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#accessories</b></h2></div>
 <div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h4>NEW LOOK</h4></div>
-<div style="position:relative;left:20px;top:148px;letter-spacing: 0.3em;border: 5px solid black;margin:5px;"><h5>SHOP NOW</h5></div>
+<div style="position:relative;left:20px;top:148px;letter-spacing: 0.3em;border: 1px solid black;margin:5px;
+width:150px;height;50px;vertical-align:middle;"><h5>SHOP NOW</h5></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat1.jpg" width="100%" style="padding-top:20px;padding-bottom:60px;">
 
 </div>
@@ -49,7 +51,8 @@
 <div style="text-align: left;">
 <div style="position:relative;left:20px;top:140px;"><h2><b>#realmen</b></h2></div>
 <div style="position:relative;left:20px;top:142px;letter-spacing: 0.3em;"><h4>BEST STYLE 2019</h4></div>
-<div style="position:relative;left:20px;top:148px;letter-spacing: 0.3em;border: 5px solid black;margin:5px;"><h5>SHOP NOW</h5></div>
+<div style="position:relative;left:20px;top:148px;letter-spacing: 0.3em;border: 1px solid black;margin:5px;
+width:150px;height;50px;vertical-align:middle;"><h5>SHOP NOW</h5></div>
 <img src="http://www.beatinternet.de/mueller/content/startpage/cat3.jpg" width="100%" style="padding-top:20px;padding-bottom:60px;">
 
 </div>
