--- a/resources/views/Homepage/MarketingHomepage.twig
+++ b/resources/views/Homepage/MarketingHomepage.twig
@@ -63,7 +63,8 @@ width:120px;height;30px;vertical-align:middle;text-align:center;"><h5>SHOP NOW</
 <div style="text-align: center;">
 <div style="color:black;">
 <h2><b>#TOP</b>PRODUCTS</h2></div>
-Entdecken Sie unsere aktuellen Aktionen zu unseren Schnelldrehern <br><br>
+<div style="letter-spacing: 0.3em;">Entdecken Sie unsere aktuellen Aktionen</div>
+<br><br>
 
       <div class="col-xs-12 col-sm-4 text-xs-center" style="">
 <div style="text-align: center;"> <a href="https://www.mb-mueller.com/damen/accessoires/taschen-gepaeck-grosshandel/steampunk-tasche-banned_9073_11419">
