--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -126,17 +126,17 @@ mail: info@mb-mueller.com<br>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                        <div style="align-items:right;">
 		       
-		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/paypal.png" width="95%" >
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/paypal.png" width="50%" >
 		       </div>
-		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/visa.png" width="95%" ">
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/visa.png" width="50%" >
 		       </div>
-		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/master.png" width="95%">
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/master.png" width="50%">
 		       </div>
-		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/am.png" width="95%">
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/am.png" width="50%">
 		       </div>
-		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/vorkasse.png" width="95%">
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/vorkasse.png" width="50%">
 		       </div>
-		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/rechnung.png" width="95%">
+		       <div style="padding:5px;float:left;width:16.6666%;"><img src="http://www.beatinternet.de/mueller/img/rechnung.png" width="50%">
 		       </div>
 		       </div>
                    </div>
