padding-bottom:20px;

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -27,7 +27,7 @@
         <div class="footer-features p-y-1 container-max" style="background-color:white;">
             <div class="row">
                
-                    <div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;">
+                    <div class="col-xs-12 col-sm-4 text-xs-center" style="padding-top:12px;padding-bottom:20px;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} --><div style="text-align: left;">
                       <img src="https://cdn02.plentymarkets.com/zt06z6ynqgmj/frontend/layout/mb-muller-logo-148917414710.jpg" width="100px"><br>
 
@@ -40,7 +40,7 @@ Fax: +49 (0) 6221 33937-59<br>
 mail: info@mb-mueller.com<br>
 </div>
                     </div>
-                     <div class="col-xs-12 col-sm-3 text-xs-center" style="padding-top:12px;">
+                     <div class="col-xs-12 col-sm-3 text-xs-center" style="padding-top:12px;padding-bottom:20px;">
                       <div style="text-align: left;line-height: 1.8;"><h3><b>INFORMATION</b></h3> <br><br>
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                          {% autoescape false %}
@@ -58,7 +58,7 @@ mail: info@mb-mueller.com<br>
                     {% endif %}
                 {% endautoescape %}</div>
                     </div>
-                     <div class="col-xs-12 col-sm-5 text-xs-center" style="padding-top:12px;">
+                     <div class="col-xs-12 col-sm-5 text-xs-center" style="padding-top:12px;padding-bottom:20px;">
                       <div style="text-align: left;">
                        <!-- {{ trans('Ceres::Template.footerStoreFeature' ~ i) }} -->
                      <h3><b>NEWSLETTER</B></h3> <br><br>
