--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -45,7 +45,7 @@
 
 
 
-<div id="vue-app" style="width:0px;">
+<div id="vue-app" style="height:0px;">
     <div class="wrapper wrapper-top">
         <!-- messages -->
         <notifications template="#vue-notifications" :initial-notifications="{{ notifications | json_encode() }}"></notifications>
