--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -80,7 +80,7 @@ $gray:                  #7a7f7f !default;
 $gray-light:            #b2b1a7 !default;
 $gray-lighter:          #dcdbd8 !default;
 $gray-lighter2:         #f4f4f4 !default;
-$gray-lightest:         #f7f7f9 !default;
+$gray-lightest:         #ffffff !default;
 
 $brand-primary:         #008ebd !default;
 $brand-secondary:       #d4021d !default;
