finished coupon widget

--- a/resources/views/Basket/Basket.twig
+++ b/resources/views/Basket/Basket.twig
@@ -37,7 +37,7 @@
                     {{ LayoutContainer.show("Ceres::Basket.AfterBasketTotals") }}
 
                     <hr>
-                    <coupon template="#vue-coupon"></coupon>
+                    <coupon></coupon>
                     <hr>
 
                     {{ LayoutContainer.show("Ceres::Basket.BeforeCheckoutButton") }}
