--- a/resources/views/Checkout/CheckoutView.twig
+++ b/resources/views/Checkout/CheckoutView.twig
@@ -134,7 +134,7 @@
                                         <basket-list size="small"></basket-list>
                                     </div>
                                     <hr>
-                                    <coupon template="#vue-coupon"></coupon>
+                                    <coupon></coupon>
                                     <hr class="mb-0">
                                 </div>
                             </aside>
