--- a/resources/views/Widgets/Common/NewsletterWidget.twig
+++ b/resources/views/Widgets/Common/NewsletterWidget.twig
@@ -9,7 +9,7 @@
 
 {{ Twig.component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
 
-<div class="widget-newsletter widget">
+<div class="widget widget-newsletter">
     <div class="widget-inner">
         <newsletter-input appearance="{{ appearance }}" :title="{{ title }}" :sub-title="{{ subTitle }}" :show-name-inputs="{{ showNameInputs }}" :show-privacy-policy-checkbox="{{ showPrivacyPolicyCheckbox }}" :email-folder="{{ emailFolder }}"></newsletter-input>
     </div>
