--- a/resources/views/Basket/Components/BasketPreview.twig
+++ b/resources/views/Basket/Components/BasketPreview.twig
@@ -30,7 +30,7 @@
             <div class="bg-light totals col-sm-5 col-md-12 pt-3">
 
                 {{ LayoutContainer.show("Ceres::BasketPreview.BeforeBasketTotals") }}
-                <basket-totals template="#vue-basket-totals"></basket-totals>
+                <basket-totals></basket-totals>
                 {{ LayoutContainer.show("Ceres::BasketPreview.AfterBasketTotals") }}
 
                 <div class="basket-preview-footer row">
