--- a/resources/views/Basket/Components/BasketPreviewHover.twig
+++ b/resources/views/Basket/Components/BasketPreviewHover.twig
@@ -28,7 +28,7 @@
                     </div>
 
                     {{ LayoutContainer.show("Ceres::BasketPreview.BeforeBasketTotals") }}
-                    <basket-totals template="#vue-basket-totals"></basket-totals>
+                    <basket-totals></basket-totals>
                     {{ LayoutContainer.show("Ceres::BasketPreview.AfterBasketTotals") }}
 
                     <div class="row">
