--- a/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
+++ b/resources/views/Widgets/Checkout/BasketTotalsWidget.twig
@@ -6,7 +6,7 @@
 <div>
     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.BeforeBasketTotals"])) }}
 
-    <basket-totals template="#vue-basket-totals"></basket-totals>
+    <basket-totals></basket-totals>
     
     {{ Twig.print(Twig.call("LayoutContainer.show", ["Ceres::Checkout.AfterBasketTotals"])) }}
 </div>
