fixed megamenu columns rendering with animations in background

--- a/resources/css/ceres-legacy.scss
+++ b/resources/css/ceres-legacy.scss
@@ -13300,6 +13300,8 @@ $border-width: 1px;
 		background-color:$navbar-background-color;
 		-webkit-box-shadow: 0 0 7px 0 rgba(0,0,0,.5);
 		        box-shadow: 0 0 7px 0 rgba(0,0,0,.5);
+		-webkit-backface-visibility: hidden;
+		        backface-visibility: hidden;
 
 		&.top-bar {
 			background-color: $top-bar-bg;
