--- a/resources/scss/ceres/views/PageDesign/_header.scss
+++ b/resources/scss/ceres/views/PageDesign/_header.scss
@@ -272,6 +272,7 @@
 	#page-header {
 		background-color:$navbar-background-color;
 		box-shadow: 0 0 7px 0 rgba(0,0,0,.5);
+		backface-visibility: hidden;
 
 		&.top-bar {
 			background-color: $top-bar-bg;
