--- a/resources/views/Widgets/Checkout/AddressWidget.twig
+++ b/resources/views/Widgets/Checkout/AddressWidget.twig
@@ -15,11 +15,7 @@
 
             {{ LayoutContainer.show("Ceres::Checkout.BeforeBillingAddress") }}
             <div class="invoice-addresses-select">
-                <invoice-address-select
-                        :address-list="{{ Twig.print("services.customer.getAddresses(1) | json_encode") }}"
-                        has-to-validate="true"
-                        :selected-address-id="{{ Twig.print("services.checkout.getBillingAddressId() | json_encode") }}">
-                </invoice-address-select>
+                <invoice-address-select has-to-validate="true"></invoice-address-select>
             </div>
             {{ LayoutContainer.show("Ceres::Checkout.AfterBillingAddress") }}
         {% else %}
@@ -32,10 +28,7 @@
 
             {{ LayoutContainer.show("Ceres::Checkout.BeforeShippingAddress") }}
             <div class="shipping-addresses-select">
-                <shipping-address-select
-                        :address-list="{{ Twig.print("services.customer.getAddresses(2) | json_encode") }}"
-                        :selected-address-id="{{ Twig.print("services.checkout.getDeliveryAddressId() | json_encode") }}">
-                </shipping-address-select>
+                <shipping-address-select></shipping-address-select>
             </div>
             {{ LayoutContainer.show("Ceres::Checkout.AfterShippingAddress") }}
         {% else %}
